--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,10 @@ embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 heapless = { version = "0.8", default-features = false }
 assign-resources = "0.4.1"
+edrv-st7735 = "0.0.1"
+embedded-graphics = "0.8.1"
+embedded-hal-bus = "0.2.0"
+embassy-embedded-hal = { version = "0.2.0", path = "../embassy/embassy-embedded-hal" }
 
 
 # cargo build/run
